// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldSelect 1`] = `
.c2 {
  width: 100%;
}

.c7 {
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  background: #FFFFFF;
}

.c7:focus {
  outline: none;
}

.c3 {
  border: 1px solid;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background: #FFFFFF;
}

.c4:focus-within {
  border-color: transparent;
  outline: 5px auto -webkit-focus-ring-color;
}

.c4 .c6 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c4 .c6::-webkit-search-decoration,
.c4 .c6::-webkit-search-cancel-button,
.c4 .c6::-webkit-search-results-button,
.c4 .c6::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+Q2FyZXQgRG93bjwvdGl0bGU+PHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OCAxNi41OSA4IDE4IDkuNDFsLTYgNi02LTZMNy40MSA4eiIgZmlsbD0iIzcwNzc4MSI+PC9wYXRoPjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c2 "
        display="inline-block"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
        width="100%"
      >
        <div
          aria-autocomplete="both"
          className="c3 c4 c5"
          onClick={[Function]}
          width="100%"
        >
          <input
            className="c6 c7"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the left 1`] = `
.c3 {
  width: 100%;
}

.c8 {
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  background: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c4 {
  border: 1px solid;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
}

.c10 .c7 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c10 .c7::-webkit-search-decoration,
.c10 .c7::-webkit-search-cancel-button,
.c10 .c7::-webkit-search-results-button,
.c10 .c7::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background: #FFF2F4;
}

.c5:focus-within {
  border-color: transparent;
  outline: 5px auto -webkit-focus-ring-color;
}

.c5 .c7 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c5 .c7::-webkit-search-decoration,
.c5 .c7::-webkit-search-cancel-button,
.c5 .c7::-webkit-search-results-button,
.c5 .c7::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+Q2FyZXQgRG93bjwvdGl0bGU+PHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OCAxNi41OSA4IDE4IDkuNDFsLTYgNi02LTZMNy40MSA4eiIgZmlsbD0iIzcwNzc4MSI+PC9wYXRoPjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #990F14;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  font-size: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c3 "
        display="inline-block"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
        width="100%"
      >
        <div
          aria-autocomplete="both"
          className="c4 c5 c6"
          onClick={[Function]}
          width="100%"
        >
          <input
            className="c7 c8"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="c9"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A FieldSelect with an error validation aligned to the right 1`] = `
.c3 {
  width: 100%;
}

.c8 {
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  background: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c4 {
  border: 1px solid;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
}

.c10 .c7 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c10 .c7::-webkit-search-decoration,
.c10 .c7::-webkit-search-cancel-button,
.c10 .c7::-webkit-search-results-button,
.c10 .c7::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background: #FFF2F4;
}

.c5:focus-within {
  border-color: transparent;
  outline: 5px auto -webkit-focus-ring-color;
}

.c5 .c7 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c5 .c7::-webkit-search-decoration,
.c5 .c7::-webkit-search-cancel-button,
.c5 .c7::-webkit-search-results-button,
.c5 .c7::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+Q2FyZXQgRG93bjwvdGl0bGU+PHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OCAxNi41OSA4IDE4IDkuNDFsLTYgNi02LTZMNy40MSA4eiIgZmlsbD0iIzcwNzc4MSI+PC9wYXRoPjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c1 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c9 {
  color: #990F14;
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  margin-left: 0.5rem;
  font-size: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c2"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c3 "
        display="inline-block"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
        width="100%"
      >
        <div
          aria-autocomplete="both"
          className="c4 c5 c6"
          onClick={[Function]}
          width="100%"
        >
          <input
            className="c7 c8"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="c9"
      fontSize="xsmall"
      type="error"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`A required FieldSelect 1`] = `
.c3 {
  width: 100%;
}

.c8 {
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  background: #FFFFFF;
}

.c8:focus {
  outline: none;
}

.c4 {
  border: 1px solid;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background: #FFFFFF;
}

.c5:focus-within {
  border-color: transparent;
  outline: 5px auto -webkit-focus-ring-color;
}

.c5 .c7 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c5 .c7::-webkit-search-decoration,
.c5 .c7::-webkit-search-cancel-button,
.c5 .c7::-webkit-search-results-button,
.c5 .c7::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+Q2FyZXQgRG93bjwvdGl0bGU+PHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OCAxNi41OSA4IDE4IDkuNDFsLTYgNi02LTZMNy40MSA4eiIgZmlsbD0iIzcwNzc4MSI+PC9wYXRoPjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c2 {
  color: #990F14;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
    <span
      aria-hidden="true"
      className="c2"
    >
       
      *
    </span>
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c3 "
        display="inline-block"
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        role="combobox"
        width="100%"
      >
        <div
          aria-autocomplete="both"
          className="c4 c5 c6"
          onClick={[Function]}
          width="100%"
        >
          <input
            className="c7 c8"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FieldSelect supports labelWeight 1`] = `
.c2 {
  width: 100%;
}

.c7 {
  border: solid 1px;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  height: 28px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
  font-size: 0.875rem;
  background: #FFFFFF;
}

.c7:focus {
  outline: none;
}

.c3 {
  border: 1px solid;
  border-color: #C1C6CC;
  border-radius: 0.25rem;
  width: 100%;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background: #FFFFFF;
}

.c4:focus-within {
  border-color: transparent;
  outline: 5px auto -webkit-focus-ring-color;
}

.c4 .c6 {
  border: none;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
}

.c4 .c6::-webkit-search-decoration,
.c4 .c6::-webkit-search-cancel-button,
.c4 .c6::-webkit-search-results-button,
.c4 .c6::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  background-image: url('data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48dGl0bGU+Q2FyZXQgRG93bjwvdGl0bGU+PHBhdGggZD0iTTcuNDEgOEwxMiAxMi41OCAxNi41OSA4IDE4IDkuNDFsLTYgNi02LTZMNy40MSA4eiIgZmlsbD0iIzcwNzc4MSI+PC9wYXRoPjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: right .25rem center,0 0;
  background-size: 1rem,100%;
  padding-right: calc(2 * .25rem + 1rem);
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 400;
  font-size: 0.875rem;
  display: inline-block;
}

<div
  className="c0 "
>
  <label
    className="c1"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="normal"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-owns="listbox-thumbs-up"
        className="c2 "
        display="inline-block"
        id="thumbs-up"
        name="thumbsUp"
        role="combobox"
        width="100%"
      >
        <div
          aria-autocomplete="both"
          className="c3 c4 c5"
          onClick={[Function]}
          width="100%"
        >
          <input
            className="c6 c7"
            id="listbox-thumbs-up"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            readOnly={true}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
